@@ -10,7 +10,8 @@
 
  /* $Id$ */
 
- require_once (dirname(__FILE__)."/movie_base.class.php");
+ require_once(dirname(__FILE__)."/movie_base.class.php");
+ if (mdb_config::pilot_imdbfill) require_once(dirname(__FILE__)."/imdb.class.php");
 
  #=============================================================================
  #================================================[ The Pilot class itself ]===
@@ -26,6 +27,27 @@
  class pilot extends movie_base {
 
  #======================================================[ Common functions ]===
+ #-----------------------------------------------------------[ Constructor ]---
+  /** Initialize class
+   * @constructor imdb
+   * @param string id IMDBID to use for data retrieval
+   */
+  function __construct($id) {
+    parent::__construct($id);
+    $this->revision = preg_replace('|^.*?(\d+).*$|','$1','$Revision$');
+    if (mdb_config::pilot_imdbfill) $this->imdb = new imdb($id);
+    $this->setid($id);
+  }
+
+  /** Setup class for a new IMDB id
+   * @method setid
+   * @param string id IMDBID of the requested movie
+   */
+  function setid($id) {
+    parent::setid($id);
+    if (mdb_config::pilot_imdbfill) $this->imdb->setid($id);
+  }
+
  #-------------------------------------------------------------[ Open Page ]---
   /** Load an IMDB page into the corresponding property (variable)
    * @method private openpage
@@ -69,16 +91,6 @@
    return $urlname;
   }
 
- #-----------------------------------------------------------[ Constructor ]---
-  /** Initialize class
-   * @constructor imdb
-   * @param string id IMDBID to use for data retrieval
-   */
-  function __construct ($id) {
-   parent::__construct($id);
-   $this->revision = preg_replace('|^.*?(\d+).*$|','$1','$Revision$');
-  }
-
  #======================================================[ Title page infos ]===
  #-------------------------------------------[ Movie title (name) and year ]---
   /** Get movie title
@@ -111,9 +123,11 @@
    * @method movieTypes
    * @return array [0..n] of strings (or empty array if no movie types specified)
    * @see MoviePilot page / (TitlePage)
-   * @version no data available
+   * @brief No data available at MoviePilot. If <code>pilot_imdbfill</code> is
+   *        set at least to BASIC_ACCESS, it will be retrieved from IMDB.
    */
   public function movieTypes() {
+    if (mdb_config::pilot_imdbfill) $this->main_movietypes = $this->imdb->movieTypes();
     return $this->main_movietypes;
   }
 
@@ -219,9 +233,11 @@
    * @brief There is not really a main language on the IMDB sites (yet), so this
    *  simply returns the first one
    * @see MoviePilot page / (TitlePage)
-   * @version no data available
+   * @brief No data available at MoviePilot. AutoRetrieval from IMDB with
+   *        <code>mdb_config::pilot_imdbfill</code> &gt; BASIC_ACCESS
    */
-  public function language () {
+  public function language() {
+    if (mdb_config::pilot_imdbfill > BASIC_ACCESS) $this->main_language = $this->imdb->language();
     return $this->main_language;
   }
 
@@ -229,9 +245,11 @@
    * @method languages
    * @return array languages (array[0..n] of strings)
    * @see MoviePilot page / (TitlePage)
-   * @version no data available
+   * @brief No data available at MoviePilot. AutoRetrieval from IMDB with
+   *        <code>mdb_config::pilot_imdbfill</code> &gt; BASIC_ACCESS
    */
-  public function languages () {
+  public function languages() {
+    if (mdb_config::pilot_imdbfill > BASIC_ACCESS) $this->langs = $this->imdb->languages();
     return $this->langs;
   }
 
@@ -273,9 +291,11 @@
    * @method colors
    * @return array colors (array[0..1] of strings)
    * @see MoviePilot page / (TitlePage)
-   * @version no data available
+   * @brief No data available at MoviePilot. AutoRetrieval from IMDB with
+   *        <code>mdb_config::pilot_imdbfill</code> &gt; BASIC_ACCESS
    */
-  public function colors () {
+  public function colors() {
+    if (mdb_config::pilot_imdbfill > BASIC_ACCESS) $this->moviecolors = $this->imdb->colors();
     return $this->moviecolors;
   }
 
@@ -285,8 +305,11 @@
    * @return string tagline
    * @see MoviePilot page / (TitlePage)
    * @version no data available
+   * @brief No data available at MoviePilot. AutoRetrieval from IMDB with
+   *        <code>mdb_config::pilot_imdbfill</code> set to FULL_ACCESS
    */
-  public function tagline () {
+  public function tagline() {
+    if (mdb_config::pilot_imdbfill==FULL_ACCESS) $this->main_tagline = $this->imdb->tagline();
     return $this->main_tagline;
   }
 
@@ -295,11 +318,13 @@
    * @method seasons
    * @return int seasons number of seasons
    * @see MoviePilot page / (TitlePage)
-   * @version no data available
+   * @brief No data available at MoviePilot. AutoRetrieval from IMDB with
+   *        <code>mdb_config::pilot_imdbfill</code> set to FULL_ACCESS
    */
   public function seasons() {
-    return 0;
-    //return $this->seasoncount;
+    if (mdb_config::pilot_imdbfill==FULL_ACCESS) $this->seasoncount = $this->imdb->seasons();
+    else return 0;
+    return $this->seasoncount;
   }
 
  #--------------------------------------------------------[ Plot (Outline) ]---
@@ -439,8 +464,11 @@
    *         and what is a comment...
    * @see MoviePilot page / (TitlePage)
    * @version no data available
+   * @brief No data available at MoviePilot. AutoRetrieval from IMDB with
+   *        <code>mdb_config::pilot_imdbfill</code> &gt; BASIC_ACCESS
    */
-  public function alsoknow () {
+  public function alsoknow() {
+    if (mdb_config::pilot_imdbfill > BASIC_ACCESS) $this->akas = $this->imdb->alsoknow();
     return $this->akas;
   }
 
@@ -449,9 +477,11 @@
    * @method sound
    * @return array sound (array[0..n] of strings)
    * @see MoviePilot page / (TitlePage)
-   * @version no data available
+   * @brief No data available at MoviePilot. AutoRetrieval from IMDB with
+   *        <code>mdb_config::pilot_imdbfill</code> &gt; BASIC_ACCESS
    */
-  public function sound () {
+  public function sound() {
+    if (mdb_config::pilot_imdbfill > BASIC_ACCESS) $this->sound = $this->imdb->sound();
     return $this->sound;
   }
 
@@ -460,9 +490,11 @@
    * @method mpaa
    * @return array mpaa (array[country]=rating)
    * @see MoviePilot page / (TitlePage)
-   * @version no data available
+   * @brief No data available at MoviePilot. AutoRetrieval from IMDB with
+   *        <code>mdb_config::pilot_imdbfill</code> &gt; NO_ACCESS
    */
-  public function mpaa () {
+  public function mpaa() {
+    if (mdb_config::pilot_imdbfill) $this->mpaas = $this->imdb->mpaa();
     return $this->mpaas;
   }
 
@@ -470,9 +502,11 @@
    * @method mpaa_hist
    * @return array mpaa (array[country][0..n]=rating)
    * @see MoviePilot page / (TitlePage)
-   * @version no data available
+   * @brief No data available at MoviePilot. AutoRetrieval from IMDB with
+   *        <code>mdb_config::pilot_imdbfill</code> set to FULL_ACCESS
    */
-  public function mpaa_hist () {
+  public function mpaa_hist() {
+    if (mdb_config::pilot_imdbfill==FULL_ACCESS) $this->mpaas_hist = $this->imdb->mpaa_hist();
     return $this->mpaas_hist;
   }
 
@@ -481,9 +515,11 @@
    * @method mpaa_reason
    * @return string reason why the movie was rated such
    * @see MoviePilot page / (TitlePage)
-   * @version no data available
+   * @brief No data available at MoviePilot. AutoRetrieval from IMDB with
+   *        <code>mdb_config::pilot_imdbfill</code> set to FULL_ACCESS
    */
-  public function mpaa_reason () {
+  public function mpaa_reason() {
+    if (mdb_config::pilot_imdbfill==FULL_ACCESS) $this->mpaa_justification = $this->imdb->mpaa_reason();
     return $this->mpaa_justification;
   }
 
@@ -492,9 +528,11 @@
    * @method prodNotes
    * @returns array production notes [status,statnote,lastupdate[day,month,mon,year],more,note]
    * @see MoviePilot page / (TitlePage)
-   * @version no data available
+   * @brief No data available at MoviePilot. AutoRetrieval from IMDB with
+   *        <code>mdb_config::pilot_imdbfill</code> set to FULL_ACCESS
    */
   public function prodNotes() {
+    if (mdb_config::pilot_imdbfill==FULL_ACCESS) $this->main_prodnotes = $this->imdb->prodNotes();
     return $this->main_prodnotes;
   }
 
@@ -503,11 +541,17 @@
    * @method plot
    * @return array plot (array[0..n] of strings)
    * @see MoviePilot page (Titlepage)
-   * @version no data available - so lets fake some using plotoutline()
+   * @brief No data available at MoviePilot. If
+   *        <code>mdb_config::pilot_imdbfill</code> is set to FULL_ACCESS, we
+   *        will automatically retrieve this data from the IMDB site configured.
+   *        Otherwise we fake some data using <code>pilot::plotoutline()</code>,
+   *        resulting in a single record (if any) available there.
    */
-  public function plot () {
-    if (empty($this->plot_plot))
-      $this->plot_plot[0] = $this->plotoutline();
+  public function plot() {
+    if (empty($this->plot_plot)) {
+      if (mdb_config::pilot_imdbfill==FULL_ACCESS) $this->plot_plot = $this->imdb->plot();
+      else $this->plot_plot[0] = $this->plotoutline();
+    }
     return $this->plot_plot;
   }
 
@@ -516,9 +560,11 @@
    * @method plot_split
    * @return array array[0..n] of array[string plot,array author] - where author consists of string name and string url
    * @see MoviePilot page (Titlepage)
-   * @version no data available, and nothing we can fake it from
+   * @brief No data available at MoviePilot. AutoRetrieval from IMDB with
+   *        <code>mdb_config::pilot_imdbfill</code> set to FULL_ACCESS
    */
   public function plot_split() {
+    if (mdb_config::pilot_imdbfill==FULL_ACCESS) $this->split_plot = $this->imdb->plot_split();
     return $this->split_plot;
   }
 
@@ -528,9 +574,11 @@
    * @method synopsis
    * @return string synopsis
    * @see MoviePilot page /synopsis
-   * @version no such data available
+   * @brief No data available at MoviePilot. AutoRetrieval from IMDB with
+   *        <code>mdb_config::pilot_imdbfill</code> set to FULL_ACCESS
    */
   public function synopsis() {
+    if (mdb_config::pilot_imdbfill==FULL_ACCESS) $this->synopsis_wiki = $this->imdb->synopsis();
     return $this->synopsis_wiki;
   }
 
@@ -540,9 +588,11 @@
    * @method taglines
    * @return array taglines (array[0..n] of strings)
    * @see MoviePilot page /taglines
-   * @version no such data available
+   * @brief No data available at MoviePilot. AutoRetrieval from IMDB with
+   *        <code>mdb_config::pilot_imdbfill</code> set to FULL_ACCESS
    */
-  public function taglines () {
+  public function taglines() {
+    if (mdb_config::pilot_imdbfill==FULL_ACCESS) $this->taglines = $this->imdb->taglines();
     return $this->taglines;
   }
 
@@ -652,9 +702,11 @@
    * @method crazy_credits
    * @return array crazy_credits (array[0..n] of string)
    * @see MoviePilot page /crazycredits
-   * @version no such data available
+   * @brief No data available at MoviePilot. AutoRetrieval from IMDB with
+   *        <code>mdb_config::pilot_imdbfill</code> set to FULL_ACCESS
    */
   public function crazy_credits() {
+    if (mdb_config::pilot_imdbfill==FULL_ACCESS) $this->crazy_credits = $this->imdb->crazy_credits();
     return $this->crazy_credits;
   }
 
@@ -664,9 +716,11 @@
    * @method episodes
    * @return array episodes (array[0..n] of array[0..m] of array[imdbid,title,airdate,plot])
    * @see MoviePilot page /episodes
-   * @version not yet available
+   * @brief No data available at MoviePilot. AutoRetrieval from IMDB with
+   *        <code>mdb_config::pilot_imdbfill</code> set to FULL_ACCESS
    */
   public function episodes() {
+    if (mdb_config::pilot_imdbfill==FULL_ACCESS) $this->season_episodes = $this->imdb->episodes();
     return $this->season_episodes;
   }
 
@@ -676,9 +730,11 @@
    * @method goofs
    * @return array goofs (array[0..n] of array[type,content]
    * @see MoviePilot page /goofs
-   * @version no such data available
+   * @brief No data available at MoviePilot. AutoRetrieval from IMDB with
+   *        <code>mdb_config::pilot_imdbfill</code> set to FULL_ACCESS
    */
   public function goofs() {
+    if (mdb_config::pilot_imdbfill==FULL_ACCESS) $this->goofs = $this->imdb->goofs();
     return $this->goofs;
   }
 
@@ -688,9 +744,11 @@
    * @method quotes
    * @return array quotes (array[0..n] of string)
    * @see MoviePilot page /quotes
-   * @version no such data available
+   * @brief No data available at MoviePilot. AutoRetrieval from IMDB with
+   *        <code>mdb_config::pilot_imdbfill</code> set to FULL_ACCESS
    */
   public function quotes() {
+    if (mdb_config::pilot_imdbfill==FULL_ACCESS) $this->moviequotes = $this->imdb->quotes();
     return $this->moviequotes;
   }
 
@@ -700,7 +758,7 @@
    * @method trailers
    * @return array trailers (array[0..n] of string)
    * @see MoviePilot page /trailers
-   * @version no such data available
+   * @version not yet available (hopefully coming soon)
    */
   public function trailers() {
     return $this->trailers;
@@ -712,9 +770,11 @@
    * @method trivia
    * @return array trivia (array[0..n] string
    * @see MoviePilot page /trivia
-   * @version no such data available
+   * @brief No data available at MoviePilot. AutoRetrieval from IMDB with
+   *        <code>mdb_config::pilot_imdbfill</code> set to FULL_ACCESS
    */
   public function trivia() {
+    if (mdb_config::pilot_imdbfill==FULL_ACCESS) $this->trivia = $this->imdb->trivia();
     return $this->trivia;
   }
 
@@ -725,11 +785,13 @@
    * @return array soundtracks (array[0..n] of array(soundtrack,array[0..n] of credits)
    * @brief Usually, the credits array should hold [0] written by, [1] performed by.
    *  But IMDB does not always stick to that - so in many cases it holds
-   *  [0] performed by, [1] courtesy of
+   *  [0] performed by, [1] courtesy of<BR>
+   *        No data available at MoviePilot. AutoRetrieval from IMDB with
+   *        <code>mdb_config::pilot_imdbfill</code> set to FULL_ACCESS
    * @see MoviePilot page /soundtrack
-   * @version no such data available
    */
   public function soundtrack() {
+    if (mdb_config::pilot_imdbfill==FULL_ACCESS) $this->soundtracks = $this->imdb->soundtrack();
     return $this->soundtracks;
   }
 
@@ -742,10 +804,12 @@
    *         spoofed - each an array of mid, name, year, comment or an empty
    *         array if no connections of that type)
    * @see MoviePilot page /movieconnection
-   * @version no data available (coming soon)
+   * @brief No data available at MoviePilot. AutoRetrieval from IMDB with
+   *        <code>mdb_config::pilot_imdbfill</code> set to FULL_ACCESS
    */
   public function movieconnection() {
-#    if (empty($this->movieconnections)) {
+    if (mdb_config::pilot_imdbfill==FULL_ACCESS) $this->movieconnections = $this->imdb->movieconnection();
+    elseif (empty($this->movieconnections)) {
 #      if (empty($this->page["MovieConnections"])) $this->openpage("MovieConnections");
 #      if ($this->page["MovieConnections"] == "cannot open page") return array(); // no such page
       $this->movieconnections["versionOf"]   = array();
@@ -759,7 +823,7 @@
       $this->movieconnections["featured"]    = array();
       $this->movieconnections["spoofs"]      = array();
       $this->movieconnections["spoofed"]     = array();
-#    }
+    }
     return $this->movieconnections;
   }
 
@@ -769,9 +833,11 @@
    * @method extReviews
    * @return array [0..n] of array [url, desc] (or empty array if no data)
    * @see MoviePilot page /externalreviews
-   * @version no data available
+   * @brief No data available at MoviePilot. AutoRetrieval from IMDB with
+   *        <code>mdb_config::pilot_imdbfill</code> set to FULL_ACCESS
    */
   public function extReviews() {
+    if (mdb_config::pilot_imdbfill==FULL_ACCESS) $this->extreviews = $this->imdb->extReviews();
     return $this->extreviews;
   }
 
@@ -802,9 +868,11 @@
    * @method prodCompany
    * @return array [0..n] of array (name,url,notes)
    * @see MoviePilot page /companycredits
-   * @version no data available
+   * @brief No data available at MoviePilot. AutoRetrieval from IMDB with
+   *        <code>mdb_config::pilot_imdbfill</code> set to FULL_ACCESS
    */
   public function prodCompany() {
+    if (mdb_config::pilot_imdbfill==FULL_ACCESS) $this->compcred_prod = $this->imdb->prodCompany();
     return $this->compcred_prod;
   }
 
@@ -813,9 +881,11 @@
    * @method distCompany
    * @return array [0..n] of array (name,url,notes)
    * @see MoviePilot page /companycredits
-   * @version no data available
+   * @brief No data available at MoviePilot. AutoRetrieval from IMDB with
+   *        <code>mdb_config::pilot_imdbfill</code> set to FULL_ACCESS
    */
   public function distCompany() {
+    if (mdb_config::pilot_imdbfill==FULL_ACCESS) $this->compcred_dist = $this->imdb->distCompany();
     return $this->compcred_dist;
   }
 
@@ -824,9 +894,11 @@
    * @method specialCompany
    * @return array [0..n] of array (name,url,notes)
    * @see MoviePilot page /companycredits
-   * @version no data available
+   * @brief No data available at MoviePilot. AutoRetrieval from IMDB with
+   *        <code>mdb_config::pilot_imdbfill</code> set to FULL_ACCESS
    */
   public function specialCompany() {
+    if (mdb_config::pilot_imdbfill==FULL_ACCESS) $this->compcred_special = $this->imdb->specialCompany();
     return $this->compcred_special;
   }
 
@@ -835,9 +907,11 @@
    * @method otherCompany
    * @return array [0..n] of array (name,url,notes)
    * @see MoviePilot page /companycredits
-   * @version no data available
+   * @brief No data available at MoviePilot. AutoRetrieval from IMDB with
+   *        <code>mdb_config::pilot_imdbfill</code> set to FULL_ACCESS
    */
   public function otherCompany() {
+    if (mdb_config::pilot_imdbfill==FULL_ACCESS) $this->compcred_other = $this->imdb->otherCompany();
     return $this->compcred_other;
   }
 
@@ -848,9 +922,11 @@
    * @return array of strings; keys: Alcohol, Sex, Violence, Profanity,
    *         Frightening - and maybe more; values: arguments for the rating
    * @see MoviePilot page /parentalguide
-   * @version no data available
+   * @brief No data available at MoviePilot. AutoRetrieval from IMDB with
+   *        <code>mdb_config::pilot_imdbfill</code> set to FULL_ACCESS
    */
   public function parentalGuide() {
+    if (mdb_config::pilot_imdbfill==FULL_ACCESS) $this->parental_guide = $this->imdb->parentalGuide();
     return $this->parental_guide;
   }
 
