@@ -8,6 +8,10 @@ v1.2.1
 * started restructuring the classes and files to provide a core API for extensions
 + first extension added: basic functionality for MoviePilot
   (http://www.moviepilot.de/), supporting some movie functionality only
++ added the pilot_imdbfill class constant to define IMDB access level for
+  complementary data from IMDB - i.e. information which is generally not
+  provided by MoviePilot can be automatically retrieved from there.
+
 
 v1.2.0 (04.10.2009)
 -------------------
